@@ -1,3 +1,5 @@
+28.jun (ws)
+      - free memory after removing score (#6164)
 27.jun (la)
       - fix #6254: Concert pitch lossy transposition (Patch by Aaron Epstein)
 26.jun (la)
